--- a/src/main/resources/templates/UpdatePosts.mustache
+++ b/src/main/resources/templates/UpdatePosts.mustache
@@ -8,7 +8,7 @@
           type="text"
           class="form-control"
           id="id"
-          value="{{post.id}}" <!--객체의 필드 접근 시 사용-->
+          value="{{post.id}}"
           readonly="readonly"
       />
     </div>
@@ -42,6 +42,7 @@
     </div>
     <a href="/" class="btn btn-secondary" role="button">Cancel</a>
     <button class="btn btn-primary" id="update-btn">Update</button>
+    <button class="btn btn-primary" id="delete-btn">Delete</button>
   </div>
 </div>
 {{>layout/footer}}
