Change Button Color

--- a/src/main/resources/templates/UpdatePosts.mustache
+++ b/src/main/resources/templates/UpdatePosts.mustache
@@ -42,7 +42,7 @@
     </div>
     <a href="/" class="btn btn-secondary" role="button">Cancel</a>
     <button class="btn btn-primary" id="update-btn">Update</button>
-    <button class="btn btn-primary" id="delete-btn">Delete</button>
+    <button class="btn btn-danger" id="delete-btn">Delete</button>
   </div>
 </div>
 {{>layout/footer}}
