--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,5 +1,5 @@
 {{>layout/header}}
-<h1>Starting Web Service with Spring Boot</h1>
+<h1>Starting Web Service with Spring Boot Ver.2</h1>
 <div class="col-md-12">
   <div class="row">
     <div class="col-md-6">
